--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,25 @@ body {
   width: 100vw;
 }
 
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
+}
+
 .button {
   border: 2px solid #fff;
   box-sizing: inherit;
