--- a/style/style.css
+++ b/style/style.css
@@ -737,22 +737,34 @@ section:nth-of-type(3) #gallery .mix .button:hover {
   color: #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(1) .card {
-  background: url('../img/thumb-1.jpg') center center/cover;
+  background: url('../img/thumb-1.jpg') no-repeat center center/cover;
+  background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
-  background: url('../img/thumb-2.jpg') center center/cover;
+  background: url('../img/thumb-2.jpg') no-repeat center center/cover;
+  background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
-  background: url('../img/thumb-3.jpg') center center/cover;
+  background: url('../img/thumb-3.jpg') no-repeat center center/cover;
+    background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
-  background: url('../img/thumb-4.jpg') center center/cover;
+  background: url('../img/thumb-4.jpg') no-repeat center center/cover;
+    background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
-  background: url('../img/thumb-5.jpg') center center/cover;
+  background: url('../img/thumb-5.jpg') no-repeat center center/cover;
+    background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
-  background: url('../img/thumb-6.jpg') center center/cover;
+  background: url('../img/thumb-6.jpg') no-repeat center center/cover;
+    background-size: contain;
+  border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
   background: url('../img/thumb-7.jpg') center center/cover;
