--- a/style/style.css
+++ b/style/style.css
@@ -492,6 +492,18 @@ nav .active {
   opacity: 1;
 }
 
+.tech-logo {
+  display: grid;
+  grid-template-columns: repeat(1fr * 6);
+  gap: 1rem;
+}
+
+.logo-group img {
+  width: 60%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 50%;
+}
 section {
   color: #616161;
   line-height: 11pt;
@@ -748,22 +760,22 @@ section:nth-of-type(3) #gallery .mix:nth-child(2) .card {
 }
 section:nth-of-type(3) #gallery .mix:nth-child(3) .card {
   background: url('../img/thumb-3.jpg') no-repeat center center/cover;
-    background-size: contain;
+  background-size: contain;
   border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
   background: url('../img/thumb-4.jpg') no-repeat center center/cover;
-    background-size: contain;
+  background-size: contain;
   border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
   background: url('../img/thumb-5.jpg') no-repeat center center/cover;
-    background-size: contain;
+  background-size: contain;
   border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
   background: url('../img/thumb-6.jpg') no-repeat center center/cover;
-    background-size: contain;
+  background-size: contain;
   border: 2px solid #fff;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(7) .card {
