--- a/style/style.scss
+++ b/style/style.scss
@@ -240,7 +240,7 @@ body {
 }
 
 .hexagon {
-  background-color: $primary;
+  background-color: red;
   display: inline-block;
   height: 100%;
   width: calc(100% * 0.57735);
